--- a/cpp-sokoban/cpp-sokoban.vcxproj
+++ b/cpp-sokoban/cpp-sokoban.vcxproj
@@ -131,10 +131,12 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="block.cpp" />
+    <ClCompile Include="solver.cpp" />
     <ClCompile Include="table.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="block.h" />
+    <ClInclude Include="solver.h" />
     <ClInclude Include="table.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
